[package]
name = "nash"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Solving Nash Equilibrium Mixed Strategies"
repository = "https://github.com/oovm/NashEquilibrium"
documentation = "https://docs.rs/nash"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num = "0.4.0"
minilp = "0.2.2"

[dev-dependencies]

[features]
default = []
